# Awesome-Task-Exchange-System

./: README.md
auth/: pyproject.toml
auth/app/: settings.py
task_tracker/: pyproject.toml
task_tracker/app/: settings.py
