[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Pavel Vergeev <vergeev@hey.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
